--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,9 +1,19 @@
 doctype html 
 html(lang="en")
     head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
+        link(href='/css/styles.css' rel='stylesheet')
         title Bokyak
     body
-        h1 Bokyak
-        p Welcome to the Bok. Big changes are coming! Stay tuned.
+        .wrapper
+            .container
+                h1 Login
+                form(action="/auth/login", method="POST")
+                    input(type="text", name="username", placeholder="Username", required="")
+                    input(type="password", name="password", placeholder="Password", required="")
+                    input(type="submit", value="Login")
+
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
