--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -15,5 +15,6 @@ html(lang="en")
                     input(type="text", name="username", placeholder="Username", required="")
                     input(type="password", name="password", placeholder="Password", required="")
                     input(type="submit", value="Login")
+                a(href="/auth/register") Need an account? Register here.
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
