--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -5,7 +5,7 @@ body {
 .wrapper {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .container {
@@ -41,4 +41,8 @@ input[type="submit"] {
     border: none;
     border-radius: 2px;
     margin-bottom: 10px;
+}
+
+.errors {
+    color: red;
 }
