--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -9,5 +9,9 @@ html(lang="en")
         title Bokyak
     body
         h1 Newsfeed
-        p Newsfeed
+        p Your unique User ID is #{userId}
+
+        form(action="/auth/logout", method="POST")
+            input(type="submit", value="Logout")
+
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
