--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -14,4 +14,37 @@ html(lang="en")
         form(action="/auth/logout", method="POST")
             input(type="submit", value="Logout")
 
+        br
+        .row
+            .col-md-6.col-xs-12.col-md-offset-3
+                .panel
+                    .panel-body
+                        .form-group
+                            textarea.form-control(placeholder="What's on your mind?" rows='3')
+                        a.btn.btn-info.btn-sm.pull-right.waves-effect.waves-light(href='javascript:void(0)') Post
+                        .clearfix
+                            hr.margin-bottom-10
+                            ul.list-group.list-group-dividered.list-group-full
+                                li.list-group-item
+                                    .media
+                                        .media-body
+                                            small.text-muted.pull-right Just now
+                                        div
+                                            | Lorem ipsum Veniam aliquip culpa laboris minim tempor labore
+                                            | commodo officia veniam non in in in.
+                                li.list-group-item
+                                    .media
+                                        .media-body
+                                            small.text-muted.pull-right Just now
+                                        div
+                                            | Lorem ipsum Veniam aliquip culpa laboris minim tempor labore
+                                            | commodo officia veniam non in in in.
+                                li.list-group-item
+                                    .media
+                                        .media-body
+                                            small.text-muted.pull-right Just now
+                                        div
+                                            | Lorem ipsum Veniam aliquip culpa laboris minim tempor labore
+                                            | commodo officia veniam non in in in.
+
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
