--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -32,7 +32,7 @@ html(lang="en")
                                         .media
                                             .media-body
                                                 small.text-muted.pull-right
-                                                    | #{post.createdAt}
+                                                    | #{post.timeSince}
                                             div
                                                 | #{post.content}
 
