--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css' rel='stylesheet')
         link(href='/css/main.css' rel='stylesheet')
         title Bokyak
     body
@@ -15,25 +16,68 @@ html(lang="en")
             input(type="submit", value="Logout")
 
         br
-        .row
-            .col-md-6.col-xs-12.col-md-offset-3
-                .panel
-                    .panel-body
-                        .form-group
-                            form(action="/feed", method="POST")
-                                input(type="textarea", name="content", placeholder="What's on your mind?")
-                                input(type="hidden" name="userId" value=userId)
-                                input(type="submit", value="Post")
-                        .clearfix
-                            hr.margin-bottom-10
-                            each post in posts
-                                ul.list-group.list-group-dividered.list-group-full
-                                    li.list-group-item
-                                        .media
-                                            .media-body
-                                                small.text-muted.pull-right
-                                                    | #{post.timeSince}
-                                            div
-                                                | #{post.content}
+
+        .container
+            .row.post-container
+                .col-4.like-square
+                    i.bi.bi-hand-thumbs-up
+                    h1 5
+                    i.bi.bi-hand-thumbs-down
+                .col-8.post-content
+                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
+
+        .post-divider
+
+        .container
+            .row.post-container
+                .col-4.like-square
+                    i.bi.bi-hand-thumbs-up
+                    h1 5
+                    i.bi.bi-hand-thumbs-down
+                .col-8.post-content
+                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
+
+        .post-divider
+
+        .container
+            .row.post-container
+                .col-4.like-square
+                    i.bi.bi-hand-thumbs-up
+                    h1 5
+                    i.bi.bi-hand-thumbs-down
+                .col-8.post-content
+                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
+
+        .post-divider
+
+        //- br
+        //- .row
+        //-     .col-md-6.col-xs-12.col-md-offset-3
+        //-         .panel
+        //-             .panel-body
+        //-                 .form-group
+        //-                     form(action="/feed", method="POST")
+        //-                         input(type="textarea", name="content", placeholder="What's on your mind?")
+        //-                         input(type="hidden" name="userId" value=userId)
+        //-                         input(type="submit", value="Post")
+        //-                 .clearfix
+        //-                     //- hr.margin-bottom-10
+        //-                     //- each post in posts
+        //-                     //-     li.list-group-item
+        //-                     //-         .media
+        //-                     //-             .media-body
+        //-                     //-                 small.text-muted.pull-right
+        //-                     //-                     | #{post.timeSince}
+        //-                     //-             div
+        //-                     //-                 | #{post.content}
+
+                            .container
+                                .row.post-container
+                                    .col-4.like-square
+                                        i.bi.bi-hand-thumbs-up
+                                        h1 5
+                                        i.bi.bi-hand-thumbs-down
+                                    .col-8.post-content
+                                        | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
