--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -16,68 +16,17 @@ html(lang="en")
             input(type="submit", value="Logout")
 
         br
-
-        .container
-            .row.post-container
-                .col-4.like-square
-                    i.bi.bi-hand-thumbs-up
-                    h1 5
-                    i.bi.bi-hand-thumbs-down
-                .col-8.post-content
-                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
-
-        .post-divider
-
-        .container
-            .row.post-container
-                .col-4.like-square
-                    i.bi.bi-hand-thumbs-up
-                    h1 5
-                    i.bi.bi-hand-thumbs-down
-                .col-8.post-content
-                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
-
-        .post-divider
-
-        .container
-            .row.post-container
-                .col-4.like-square
-                    i.bi.bi-hand-thumbs-up
-                    h1 5
-                    i.bi.bi-hand-thumbs-down
-                .col-8.post-content
-                    | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
-
-        .post-divider
-
-        //- br
-        //- .row
-        //-     .col-md-6.col-xs-12.col-md-offset-3
-        //-         .panel
-        //-             .panel-body
-        //-                 .form-group
-        //-                     form(action="/feed", method="POST")
-        //-                         input(type="textarea", name="content", placeholder="What's on your mind?")
-        //-                         input(type="hidden" name="userId" value=userId)
-        //-                         input(type="submit", value="Post")
-        //-                 .clearfix
-        //-                     //- hr.margin-bottom-10
-        //-                     //- each post in posts
-        //-                     //-     li.list-group-item
-        //-                     //-         .media
-        //-                     //-             .media-body
-        //-                     //-                 small.text-muted.pull-right
-        //-                     //-                     | #{post.timeSince}
-        //-                     //-             div
-        //-                     //-                 | #{post.content}
-
-                            .container
-                                .row.post-container
-                                    .col-4.like-square
-                                        i.bi.bi-hand-thumbs-up
-                                        h1 5
-                                        i.bi.bi-hand-thumbs-down
-                                    .col-8.post-content
-                                        | One of three columns because it's kind of long and I want to make sure I understand how this new bootstrap 5 with CSS 3 actually works because html bootstrap css javascript bloowowowodjSDFn
+        each post in posts
+            .container
+                .row.post-container
+                    .col-4.like-square
+                        i.bi.bi-hand-thumbs-up
+                        h1 #{post.numLikes}
+                        i.bi.bi-hand-thumbs-down
+                    .col-8.post-content
+                        | #{post.content}
+                        .post-date
+                            | #{post.timeSince}
+                .post-divider
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
