--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -53,8 +53,24 @@ html(lang="en")
 
                     .col-8.post-content
                         | #{post.content}
-                        .post-date
+                        .extra-data
                             | #{post.timeSince}
+
+                            button.btn(type='button' data-bs-toggle='modal' data-bs-target='#exampleModal')
+                                i.bi.bi-pencil
+
+                            #exampleModal.modal.fade(tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true')
+                                .modal-dialog
+                                    .modal-content
+                                        .modal-header
+                                            h5#exampleModalLabel.modal-title Modal title
+                                            button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+                                        .modal-body
+                                            | ...
+                                        .modal-footer
+                                            button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
+                                            button.btn.btn-primary(type='button') Save changes
+
                 .post-divider
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
