formatting modal stuff

--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -63,13 +63,13 @@ html(lang="en")
                                 .modal-dialog
                                     .modal-content
                                         .modal-header
-                                            h5#exampleModalLabel.modal-title Modal title
+                                            h5#exampleModalLabel.modal-title #{post.content}
                                             button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
                                         .modal-body
                                             | ...
-                                        .modal-footer
-                                            button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
-                                            button.btn.btn-primary(type='button') Save changes
+                                        //- .modal-footer
+                                        //-     button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
+                                        //-     button.btn.btn-primary(type='button') Save changes
 
                 .post-divider
 
