--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -41,6 +41,13 @@ nav {
     width: 80%;
 }
 
+.comment-content {
+    display: inline-block;
+    padding-top: 5px;
+    width: 80%;
+    position: absolute;
+}
+
 .extra-data {
     color: gray;
     font-size: medium;
@@ -65,4 +72,17 @@ nav {
 
 .sm-margin-top {
     margin-top: 8px;
+}
+
+#comments {
+    background-color: white;
+    border-radius: 30px;
+    padding: 15px;
+    margin-top: 5px;
+}
+
+.comment-box {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
