--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -1,5 +1,5 @@
 body {
-    background-image: radial-gradient(circle, #29524A, #E9BCB7);
+    background-image: radial-gradient(circle, #3EB489, #EBF7F3);
     justify-content: center;
 }
 
