--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,88 +1,68 @@
 body {
     background-color: #eee;
-    justify-content: center;
+    font-family: 'Avenir LT Std', sans-serif;
 }
 
 nav {
+    background-color: #3EB489;
+    height: 65px;
+    font-size: x-large;
+    text-align: center;
+    color: white;
+    box-shadow: 2px 2px 2px 2px #888888;
+}
+
+nav .modal {
+    color: black;
+}
+
+nav a {
+    color: inherit;
+    text-decoration: none;
+}
+
+nav > .col-2 > a {
     padding-left: 10px;
-    padding-right: 10px;
 }
 
-#body-content {
-    margin-top: 15px;
-    margin-left: 10px;
-    margin-right: 10px;
+.post-box {
+    height: 120px;
+    border-bottom: 1px solid black;
+    display: flex;
 }
 
-.post-container {
-    background-color: #fff;
-    border-radius: 30px;
+.post-details-box {
+    padding-left: 10px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    display: inline-flex;
+    flex-direction: column;
+    position: relative;
+    min-height: 100%;
 }
 
-.post-divider {
-    height: 20px;
-    background-color: #eee;
+#exampleModal .modal-body input {
+    float: right;
+    margin-top: 10px;
+    background-color: #3EB489;
+    border: 3px solid #3EB489;
+}
+
+.post-content-box {
+    font-size: larger;
+}
+
+.post-time-box {
+    font-size: small;
+    color: #3EB489;
+    flex-grow: 1;
+    position: absolute;
+    bottom: 0;
     width: 100%;
 }
 
-.like-square {
-    overflow: hidden;
-    width: 20%;
-    text-align: center;
+.post-like-box {
     display: inline-block;
+    font-size: x-large;
     margin: auto;
-}
-
-.post-content {
-    display: inline-block;
-    padding-top: 10px;
-    width: 80%;
-}
-
-.comment-content {
-    display: inline-block;
-    padding-top: 10px;
-    width: 80%;
-    position: absolute;
-}
-
-.extra-data {
-    color: gray;
-    font-size: medium;
-}
-
-.bi-pencil {
-    margin-left: 10px;
-}
-
-.whitebg {
-    background-color: white;
-}
-
-.comments-container {
-    background-color: #fff;
-    border-radius: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.sm-margin-top {
-    margin-top: 8px;
-}
-
-#comments {
-    background-color: white;
-    border-radius: 30px;
-    padding: 15px;
-    margin-top: 5px;
-}
-
-.comment-box {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    text-align: center;
 }
