--- a/src/views/feed.pug
+++ b/src/views/feed.pug
@@ -6,63 +6,48 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css' rel='stylesheet')
+        link(href='http://fonts.cdnfonts.com/css/avenir-lt-std' rel='stylesheet')
         link(href='/css/main.css' rel='stylesheet')
-        title Bokyak
+        title BokYak
+        script(src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous')
+        style.
+            @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
     body
-        nav.navbar.navbar-expand-lg.navbar-light.bg-success
-            .container-fluid
-                a.navbar-brand(href='/feed') Bokyak
-                button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
-                    span.navbar-toggler-icon
-                #navbarNav.collapse.navbar-collapse
-                    ul.navbar-nav
-                        li.nav-item
-                            a.nav-link.active(type='submit' aria-current='page' href='/auth/logout') Logout
+        nav.navbar.navbar-expand-lg.navbar-light
+            .col-2
+                a(href="/") BokYak
+            .col-8
+                a(href="/auth/logout") Logout
+            .col-2
+                // Button trigger modal
+                i.bi.bi-pencil-square(type="button" data-bs-toggle='modal' data-bs-target='#exampleModal')
 
-        #body-content
-            h1 Newsfeed
-            form(action="/feed", method="POST")
-                .form-group
-                    textarea.form-control(rows='3' name='content' placeholder="What's on your mind?")
-                input.sm-margin-top(type="submit" value="Post")
-            hr
+                // Modal
+                #exampleModal.modal.fade(tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true')
+                    .modal-dialog
+                        .modal-content
+                            .modal-header
+                                h5#exampleModalLabel.modal-title Write your post here
+                                button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+                            .modal-body
+                                form(action="/feed", method="POST")
+                                    .form-group
+                                        textarea.form-control(rows='3' name='content' placeholder="What's on your mind?")
+                                    input.btn.btn-primary(type="submit" value="Post")
 
-            each post in posts
-                .container
-                    .row.post-container
-                        .col-4.like-square
-                            if !post.currentUserLikesPost
-                                form(action='/feed/' + post.postId + '/like' method='POST')
-                                    input(type="hidden" name="userId" value=userId)
-                                    button.btn(type='submit')
-                                        i.h3.bi.bi-caret-up
-                            else
-                                form(action='/feed/' + post.postId + '/like' method='POST')
-                                    input(type="hidden" name="userId" value=userId)
-                                    button.btn(type='submit')
-                                        i.h3.bi.bi-caret-up-fill
-
-                            h5 #{post.score}
-
-                            if !post.currentUserDislikesPost
-                                form(action='/feed/' + post.postId + '/dislike' method='POST')
-                                    input(type="hidden" name="userId" value=userId)
-                                    button.btn(type='submit')
-                                        i.h3.bi.bi-caret-down
-                            else
-                                form(action='/feed/' + post.postId + '/dislike' method='POST')
-                                    input(type="hidden" name="userId" value=userId)
-                                    button.btn(type='submit')
-                                        i.h3.bi.bi-caret-down-fill
-
-                        .col-8.post-content
-                            | #{post.content}
-                            .extra-data
+        each post in posts
+            .post-box
+                .post-details-box.col-10
+                    .post-content-box
+                        | #{post.content}
+                    .post-time-box
+                        span
+                            i.bi.bi-clock
                                 | #{post.timeSince}
-
-                                a.h5.bi.bi-pencil(href='/feed/' + post.postId)
-                                | #{post.commentCount}
-
-                    .post-divider
+                .post-like-box.col-2
+                    i.bi.bi-caret-up
+                    .score
+                        | #{post.score}
+                    i.bi.bi-caret-down
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
